# demo_mesh_vendor_model

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l10_cpuapp.conf  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf
include/: vnd_cli.h  vnd_common.h  vnd_srv.h
src/: error_code.h  main.c  model_handler.c  model_handler.h  node_app.c  node_app.h  nus_setting_app.c  nus_setting_app.h  path_table.c  path_table.h  uart_app.c  uart_app.h  vnd_cli.c  vnd_srv.c
